Finished Creation and Deletion Sim