@@ -29,11 +29,11 @@ public class CreateKuchenThread extends Thread{
         }
         return allergene;
     }
-    private List<ObstkuchenImp> kuchen = List.of(
+    private ArrayList<ObstkuchenImp> kuchen = new ArrayList<>(Arrays.asList(
             new ObstkuchenImp(-1, new Date(),new HerstellerImp("Alice"), new BigDecimal("4.50"), 300, Duration.ofDays(14), this.parseAllergene(allergene1), "Apfel"),
             new ObstkuchenImp(-1, new Date(),new HerstellerImp("Jannik"), new BigDecimal("3.25"), 200, Duration.ofDays(7), this.parseAllergene(allergene2), "Erdbeere"),
             new ObstkuchenImp(-1, new Date(),new HerstellerImp("Xenia"), new BigDecimal("5.00"), 500, Duration.ofDays(20), this.parseAllergene(allergene3), "Birne"),
-            new ObstkuchenImp(-1, new Date(),new HerstellerImp("Marco"), new BigDecimal("6.50"), 100, Duration.ofDays(16), this.parseAllergene(allergene4), "Mango")
+            new ObstkuchenImp(-1, new Date(),new HerstellerImp("Marco"), new BigDecimal("6.50"), 100, Duration.ofDays(16), this.parseAllergene(allergene4), "Mango"))
     );
     public verkaufsAutomat automat;
     public CreateKuchenThread(verkaufsAutomat imput){
@@ -44,10 +44,17 @@ public class CreateKuchenThread extends Thread{
         while (true) {
             Collections.shuffle(this.kuchen);
             synchronized (this.automat){
-                if (this.automat.getAnzahlFaecher() == 0){
-                    System.out.println("Maximal Anzahl an Kuchen erreicht. Bitte lösche erst einen Kuschen");
+                int freeSlot = this.automat.findNextFreeSlot();
+                if (freeSlot == 0){
+                    continue;
+                }else{
+                    boolean returnvalue = this.automat.create(new ObstkuchenImp(-1, new Date(),new HerstellerImp("Alice"), new BigDecimal("4.50"), 300, Duration.ofDays(14), this.parseAllergene(allergene1), "Apfel"));
+                    if (returnvalue){
+                        System.out.println("Fachnummer: " + freeSlot + " | Kuchen wurde hinzugefügt | from Thread: " + Thread.currentThread().threadId());
+                    }else{
+                        System.out.println("Kuchen konnte nicht created werden | from Thread: " + Thread.currentThread().threadId());
+                    }
                 }
-                this.automat.create(this.kuchen.get(0));
 
             }
 
